--- a/src/Modal/Folder Modal/FolderModal.module.css
+++ b/src/Modal/Folder Modal/FolderModal.module.css
@@ -1,4 +1,4 @@
-/* Folder Modal Styles - CardsTemplate Inspired Design */
+/* Folder Modal Styles - RecordsTemplate Inspired Design */
 
 .folderModal {
   background: transparent;
